@@ -4,4 +4,8 @@ export(defineClass)
 export(publicFunction)
 export(publicValue)
 exportClasses(oom)
+exportMethods("$")
+exportMethods("$<-")
+exportMethods(show)
+exportMethods(summary)
 import(methods)
